@@ -1,0 +1,2 @@
+label_value <- function(variable, value) value
+label_both <- function(variable, value) paste(variable, value, sep = ": ")
