@@ -13,3 +13,4 @@ ggplot2 0.8.3  (2008-XX-XX)
 * xlim and ylim now work recognise Date and POSIXct classes to create date and date_time scales respectively
 * geom_text: better legend
 * alpha: new aesthetic, with scale alpha.  Where a geom has both fill and colour, alpha affects the fill.
+* facet_grid now takes strip label function from parameter labeller, not theme setting
